[gd_scene load_steps=3 format=3 uid="uid://b7j1pc1wuq16x"]

[ext_resource type="Theme" uid="uid://dkkmstnd7ws1s" path="res://First Theme.tres" id="1_fll5r"]
[ext_resource type="Script" path="res://scene/option.gd" id="2_xqgmm"]

[node name="Option" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fll5r")
script = ExtResource("2_xqgmm")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VolumeContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MasterVoume" type="Label" parent="MarginContainer/VBoxContainer/VolumeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Master Volume
"

[node name="MasterSlider" type="HSlider" parent="MarginContainer/VBoxContainer/VolumeContainer"]
layout_mode = 2
size_flags_vertical = 4
max_value = 3.0
step = 0.001

[node name="MusicVolume" type="Label" parent="MarginContainer/VBoxContainer/VolumeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Music Volume
"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer/VolumeContainer"]
layout_mode = 2
size_flags_vertical = 4
max_value = 3.0
step = 0.001

[node name="SFXVolume" type="Label" parent="MarginContainer/VBoxContainer/VolumeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="MarginContainer/VBoxContainer/VolumeContainer"]
layout_mode = 2
size_flags_vertical = 4
max_value = 3.0
step = 0.001

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "return"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/VolumeContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/VolumeContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/VolumeContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
